--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,5 +7,13 @@ RUN npm install --ignore-scripts
 COPY frontend .
 RUN npm run build
 
+COPY frontend/start.sh ./start.sh
+RUN chmod +x ./start.sh
+
+RUN addgroup -S app && adduser -S app -G app && \
+    chown -R app:app /app
+
+USER app
+
 EXPOSE 5173
-CMD ["npm", "run", "dev", "--", "--host"]
+CMD ["./start.sh"]
