--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -13,6 +13,13 @@ COPY backend/requirements.txt ./requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY backend/app ./app
+COPY backend/start.sh ./start.sh
+RUN chmod +x ./start.sh
 
-EXPOSE 8000
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+RUN addgroup --system app && adduser --system --ingroup app app && \
+    chown -R app:app /app
+
+USER app
+
+EXPOSE 8443
+CMD ["./start.sh"]
